# fractional_splines

./: .gitignore  README.md  pyproject.toml
examples/BVP-paper/: nonlinear_example.py  polynomial_convergence.py
examples/IVP-paper/: diethelm_comparison.py  fvdp_simulation.py  polynomial_convergence.py
examples/VdP/: frac_vdp_oscillator_example.py
fracnum/: numerical.py  ode_functions.py
fracnum/splines/: spline_solvers.py  static_spline_methods.py
