[project]
name = "fracnum"
description = "Tools for fractional calculus and fractional differential equations. By Niels Goedegebure."
version = "0.9.5"

requires-python = ">=3.9"

dependencies = [
    "numpy==1.26.4",
    "scipy~=1.13.1",
    "matplotlib~=3.9.2",
    "mpmath~=1.3.0",
    "tqdm~=4.66.5",
    "xarray~=2024.7.0",
    "netcdf4~=1.7.2",
    "python-dotenv==1.1.0",
    "numba==0.60.0",
    "opt-einsum>=3.4.0"
]

[project.optional-dependencies]
gpu = ["cupy"]  # Or use "cupy-cuda12x" for CUDA 12.x or "cupy-cuda11x" for CUDA 11.x

[tool.setuptools]
packages = ["fracnum"]